# libkalman

./: Makefile.am  README  configure.ac
include/: ConstantVelocityPositionFilter.hpp  KalmanFilter.hpp
test/: Makefile.am  kalman.cpp  kf-nonlinear-plot.m  kf-nonlinear.cpp  ukf-nonlinear-plot.m  ukf-nonlinear-random.cpp  ukf-nonlinear.cpp
